force-app/main/default/objects/QuoteLineItem/fields/DSALES_Comision__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Comision__c</fullName>
    <description>Campo para registrar la comisión de la póliza</description>
    <label>Comisión</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>