force-app/main/default/objects/QuoteLineItem/fields/DSALES_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Descripcion__c</fullName>
    <description>Campo para recibir las características del seguro</description>
    <label>Descripción</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>