force-app/main/default/objects/QuoteLineItem/fields/DSALES_Fechadecompra__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadecompra__c</fullName>
    <label>Fecha de compra</label>
    <type>Date</type>
</CustomField>