force-app/main/default/objects/QuoteLineItem/fields/DSALES_Fechadeinicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadeinicio__c</fullName>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>