force-app/main/default/objects/QuoteLineItem/fields/DSALES_Fechadetermino__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadetermino__c</fullName>
    <label>Fecha de termino</label>
    <type>Date</type>
</CustomField>