force-app/main/default/objects/QuoteLineItem/fields/DSALES_Impuestos__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Impuestos__c</fullName>
    <label>Impuestos</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>