force-app/main/default/objects/QuoteLineItem/fields/DSALES_ListaArticulo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ListaArticulo__c</fullName>
    <description>Ayuda a definir el artículo seleccionado y a separarlo con su listado correspondiente</description>
    <inlineHelpText>Un artículo como Refrigerador o Cafetera, caería en producto</inlineHelpText>
    <label>Tipo de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>GEX</fullName>
                <isActive>false</isActive>
                <label>GEX</label>
            </value>
            <value>
                <fullName>Producto (Seguro de Motos)</fullName>
                <isActive>false</isActive>
                <label>Producto (Seguro de Motos)</label>
            </value>
            <value>
                <fullName>Seguro Motos</fullName>
                <isActive>false</isActive>
                <label>Seguro Motos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>