force-app/main/default/objects/QuoteLineItem/fields/DSALES_Nombre__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombre__c</fullName>
    <formula>If (TEXT(Vigencia_meses__c) &lt;&gt; null, &quot;Garantía Extendida&quot; &amp; &quot; - &quot; &amp; TEXT(Vigencia_meses__c )&amp; &quot; M &quot; , Product2.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del servicio para NPV</label>
    <type>Text</type>
</CustomField>