force-app/main/default/objects/QuoteLineItem/fields/DSALES_NombreProducto__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NombreProducto__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSALES_NombreProducto</label>
    <type>Text</type>
</CustomField>