force-app/main/default/objects/QuoteLineItem/fields/DSALES_NombreProductoServicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NombreProductoServicio__c</fullName>
    <label>Cotizados</label>
    <length>60</length>
    <type>Text</type>
</CustomField>