force-app/main/default/objects/QuoteLineItem/fields/DSALES_PagoContado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PagoContado__c</fullName>
    <description>Campo para recibir el pago de contado cuando se cotice mensualmente</description>
    <label>Pago de contado</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>