force-app/main/default/objects/QuoteLineItem/fields/DSALES_Pagomensual__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Pagomensual__c</fullName>
    <description>Campo para informar al cliente cuanto pagaría mensualmente</description>
    <label>Pago mensual</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>