force-app/main/default/objects/QuoteLineItem/fields/DSALES_Plazo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Plazo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plazo</label>
    <referenceTo>Plazo__c</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>Partidas_de_presupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>