force-app/main/default/objects/QuoteLineItem/fields/DSALES_Primaneta__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Primaneta__c</fullName>
    <label>Prima neta</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>