force-app/main/default/objects/QuoteLineItem/fields/DSALES_Recargos__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Recargos__c</fullName>
    <description>Campo para registrar los recargos de la póliza</description>
    <label>Recargos</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>