force-app/main/default/objects/QuoteLineItem/fields/DSALES_Segurogratis__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Segurogratis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para saber si el producto lleva seguro gratis</description>
    <label>Seguro gratis</label>
    <type>Checkbox</type>
</CustomField>