force-app/main/default/objects/QuoteLineItem/fields/DSales_SKU_Producto__c.field-meta.xml
<CustomField>
    <fullName>DSales_SKU_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>Partidas_de_presupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>