force-app/main/default/objects/QuoteLineItem/fields/DSales_Tipo_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSales_Tipo_de_Servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Servicio</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Partidas de presupuesto (Tipo de Servicio)</relationshipLabel>
    <relationshipName>Partidas_de_presupuesto5</relationshipName>
    <type>Lookup</type>
</CustomField>