force-app/main/default/objects/QuoteLineItem/fields/DSALES_Tipodeproducto__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodeproducto__c</fullName>
    <formula>TEXT(Product2.DSales_Tipo_de_Producto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de producto</label>
    <type>Text</type>
</CustomField>