force-app/main/default/objects/QuoteLineItem/fields/DSALES_TrackingID__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TrackingID__c</fullName>
    <description>Campo para guardar el tracking Id de la solicitud de cotización</description>
    <label>Tracking ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>