force-app/main/default/objects/QuoteLineItem/fields/DSALES_Vendido__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Vendido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendido</label>
    <type>Checkbox</type>
</CustomField>