force-app/main/default/objects/QuoteLineItem/fields/dsalesAR__c.field-meta.xml
<CustomField>
    <fullName>dsalesAR__c</fullName>
    <description>Campo AR para el objeto Partida de presupuesto</description>
    <label>AR</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>