force-app/main/default/objects/QuoteLineItem/fields/dsalesARMuebles__c.field-meta.xml
<CustomField>
    <fullName>dsalesARMuebles__c</fullName>
    <formula>Product2.dsalesAR__c</formula>
    <label>AR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>