force-app/main/default/objects/QuoteLineItem/fields/dsalesGastosDeOperacionDelRecibo__c.field-meta.xml
<CustomField>
    <fullName>dsalesGastosDeOperacionDelRecibo__c</fullName>
    <label>Gastos de operación del recibo</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>