force-app/main/default/objects/QuoteLineItem/fields/dsalesIdSecuencia__c.field-meta.xml
<CustomField>
    <fullName>dsalesIdSecuencia__c</fullName>
    <label>idSecuencia</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>