force-app/main/default/objects/QuoteLineItem/fields/DSalesNombreServicio_del__c.field-meta.xml
<CustomField>
    <fullName>DSalesNombreServicio_del__c</fullName>
    <formula>Product2.Name</formula>
    <label>Nombre de servicio</label>
    <type>Text</type>
</CustomField>