force-app/main/default/objects/QuoteLineItem/fields/dsalesOpcionPago__c.field-meta.xml
<CustomField>
    <fullName>dsalesOpcionPago__c</fullName>
    <description>Campo para identificar si la partida es de contado o crédito.</description>
    <label>Opción de pago</label>
    <length>20</length>
    <type>Text</type>
</CustomField>