force-app/main/default/objects/QuoteLineItem/fields/dsalesPagoInicial__c.field-meta.xml
<CustomField>
    <fullName>dsalesPagoInicial__c</fullName>
    <description>Campo para registrar el pago inicial cuando se recibe una cotización a crédito</description>
    <label>Pago inicial</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>