force-app/main/default/objects/QuoteLineItem/fields/dSalesProveedor__c.field-meta.xml
<CustomField>
    <fullName>dSalesProveedor__c</fullName>
    <label>Proveedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>