force-app/main/default/objects/QuoteLineItem/fields/dsalesQuoteId__c.field-meta.xml
<CustomField>
    <fullName>dsalesQuoteId__c</fullName>
    <description>Campo para recibir el id de cotización de Interproteccion por cada uno de los paquetes solicitados.</description>
    <label>Quote id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>