force-app/main/default/objects/QuoteLineItem/fields/dsalesSkuTangible__c.field-meta.xml
<CustomField>
    <fullName>dsalesSkuTangible__c</fullName>
    <description>SKU Tangible para identificar el Servicio a que productivo tangible en el pdf de la cotización</description>
    <label>SKU Tangible</label>
    <length>6</length>
    <type>Text</type>
</CustomField>