force-app/main/default/objects/QuoteLineItem/fields/dsalesSubTipo__c.field-meta.xml
<CustomField>
    <fullName>dsalesSubTipo__c</fullName>
    <description>Identifica el subtipo de la Partida de Presupuesto</description>
    <label>SubTipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dsalesGarantíaExtendida</fullName>
                <label>Garantía Extendida</label>
            </value>
            <value>
                <fullName>dsalesArmadoMuebles</fullName>
                <label>Armado de Muebles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>