force-app/main/default/objects/QuoteLineItem/fields/SKUTangible__c.field-meta.xml
<CustomField>
    <fullName>SKUTangible__c</fullName>
    <description>SKU Tangible</description>
    <label>SKU Tangible</label>
    <length>6</length>
    <type>Text</type>
</CustomField>